# django-docs-mcp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  GEMINI.md  README.md  docker-compose.yml  pyproject.toml  skills-lock.json  회고.md
.agents/skills/paradedb-skill/: EXAMPLES.md  README.md  SKILL.md
.gemini/commands/: speckit.analyze.toml  speckit.checklist.toml  speckit.clarify.toml  speckit.constitution.toml  speckit.implement.toml  speckit.plan.toml  speckit.specify.toml  speckit.tasks.toml  speckit.taskstoissues.toml
.gemini/skills/architect/: SKILL.md
.gemini/skills/backend-dev/: SKILL.md
.gemini/skills/code-reviewer/: SKILL.md
.gemini/skills/data-architect/: SKILL.md
.gemini/skills/devops/: SKILL.md
.gemini/skills/frontend-dev/: SKILL.md
.gemini/skills/product-analyst/: SKILL.md
.gemini/skills/qa-engineer/: SKILL.md
.gemini/skills/security-auditor/: SKILL.md
.gemini/skills/tech-writer/: SKILL.md
.specify/: init-options.json
.specify/memory/: constitution.md
.specify/scripts/bash/: check-prerequisites.sh  common.sh  create-new-feature.sh  setup-plan.sh  update-agent-context.sh
.specify/scripts/powershell/: check-prerequisites.ps1  common.ps1  create-new-feature.ps1  setup-plan.ps1  update-agent-context.ps1
.specify/templates/: agent-file-template.md  checklist-template.md  constitution-template.md  spec-template.md  tasks-template.md
crawler/: admin_cookbook.py  django42_crawler.py  django52_crawler.py  orm_cookbook.py  pyproject.toml
crawler/tests/: test_converter.py  test_django52_crawler.py  test_metadata.py  test_rst_converter.py  test_scraper.py  test_utils.py
crawler/utils/: base_crawler.py  converter.py  logger.py  rst_converter.py  scraper.py  storage.py
django_server/: db.Dockerfile  pyproject.toml  pytest.ini
django_server/scripts/: evaluate_search.py
django_server/src/core/: settings.py  urls.py
django_server/src/documents/: admin.py  apps.py  models.py  urls.py  views.py
django_server/src/documents/management/commands/: ingest_docs.py
django_server/src/documents/migrations/: 0001_initial.py  0002_add_section_title_and_bm25.py  0002_chunk_section_title_alter_chunk_content_and_more.py  0003_chunk_multi_vector_low_dim.py  0004_alter_chunk_multi_vector_low_dim_and_more.py
django_server/src/documents/services/: chunking.py  embedding.py  ingestion.py  reranking.py  search.py
django_server/src/documents/templates/playground/: base.html  playground.html  results.html
django_server/tests/: conftest.py  test_chunking.py  test_ingestion.py  test_models.py  test_search.py
django_server/tests/samples/: large_code_block.md  test_doc.md
mcp_server/: README.md  logger.py  main.py  pyproject.toml
specs/001-crawl-django-docs/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-crawl-django-docs/checklists/: crawler.md  requirements.md
specs/001-crawl-django-docs/contracts/: crawler-cli-contract.md
specs/002-django-server-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-django-server-core/checklists/: requirements.md
specs/002-django-server-core/contracts/: ingestion-cli-contract.md  playground-ui-contract.md
specs/003-improve-markdown-chunking/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-improve-markdown-chunking/checklists/: requirements.md
specs/004-hybrid-search-rerank/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-hybrid-search-rerank/checklists/: requirements.md
specs/005-optimize-search-rerank/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-optimize-search-rerank/checklists/: requirements.md
specs/006-crawl-django-52-docs/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-crawl-django-52-docs/checklists/: requirements.md
specs/007-crawl-django-web/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-crawl-django-web/checklists/: requirements.md
specs/007-crawl-django-web/contracts/: cli_contract.md
specs/008-mcp-server-implementation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-mcp-server-implementation/checklists/: requirements.md
specs/008-mcp-server-implementation/contracts/: tool_contract.md
specs/_architecture/: architecture_design.md  database_schema.md  embedding_strategy.md  evaluation_framework.md  mcp_tools_contract.md  project_proposal.md  serving_architecture.md  tech_stack_rationale.md  technical_background.md
specs/_archive/: speckit-version-compare.md
