[project]
name = "django-docs-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "psycopg[binary]~=3.3.3",
]

[dependency-groups]
dev = [
    "ruff~=0.15.6",
    "pre-commit~=4.5.1",
    "mypy~=1.19.1",
    "django-stubs[compatible-mypy]~=5.2.9",
    "pytest~=9.0.2",
    "pytest-asyncio~=1.3.0",
    "respx~=0.22.0",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["mcp_server", "django_server", "crawler"]

# ==============================================================================
# Ruff Configuration (Linting & Formatting)
# ==============================================================================
[tool.ruff]
# Set the maximum line length to 100.
line-length = 100
# Target Python version
target-version = "py314"
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "**/migrations/*",
]

[tool.ruff.lint]
# Enable Pyflakes (`F`), pycodestyle (`E`), isort (`I`),
# pyupgrade (`UP`), flake8-bugbear (`B`), and flake8-simplify (`SIM`).
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# ==============================================================================
# Mypy Configuration (Static Type Checking)
# ==============================================================================
[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
explicit_package_bases = true
mypy_path = ["crawler", "django_server/src", "mcp_server"]
ignore_missing_imports = true

plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
# Ignore migration files as they are auto-generated and often untyped
module = "*.migrations.*"
ignore_errors = true

# ==============================================================================
# Django Stubs Configuration (Optional, activate when installed)
# ==============================================================================
[tool.django-stubs]
django_settings_module = "core.settings"

# ==============================================================================
# Pytest Configuration
# ==============================================================================
[tool.pytest.ini_options]
pythonpath = [
    "crawler",
    "django_server",
    "mcp_server"
]
