[project]
name = "django-server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "django~=5.2.0",
    "psycopg[binary]~=3.3.3",
    "pgvector~=0.4.2",
    "sentence-transformers~=5.3.0",
    "langchain-text-splitters~=1.1.1",
    "django-htmx~=1.27.0",
    "python-dotenv~=1.2.2",
    "python-frontmatter~=1.1.0",
    "tqdm~=4.67.3",
    "optimum[onnxruntime]~=2.1.0",
    "transformers~=4.57.0",
    "django-paradedb~=0.4.0",
]

[dependency-groups]
dev = []

[tool.uv]
package = false
