[project]
name = "mcp-server"
version = "0.1.0"
description = "MCP Serving for Django Docs Search"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp~=3.1.1",
    "django~=5.2.0",
    "httpx~=0.28.1",
    "pydantic>=2.11.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
